[gd_scene load_steps=5 format=3 uid="uid://46i7qfxwfv6b"]

[ext_resource type="Script" path="res://menus/road_map.gd" id="1_g8hro"]
[ext_resource type="Texture2D" uid="uid://8vlh0rcvgwjw" path="res://menus/updatedmap.webp" id="2_hla2o"]
[ext_resource type="Texture2D" uid="uid://msf27v0mhh7h" path="res://menus/hey_queue.png" id="3_n5rdp"]

[sub_resource type="LabelSettings" id="LabelSettings_xgc72"]
font_size = 30

[node name="Road_map" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8hro")

[node name="RoadMap" type="Sprite2D" parent="."]
position = Vector2(574, 327)
texture = ExtResource("2_hla2o")

[node name="Beach" type="Button" parent="."]
layout_mode = 0
offset_left = 733.0
offset_top = 499.0
offset_right = 825.0
offset_bottom = 573.0
scale = Vector2(1.5, 1.5)
text = "Beach"

[node name="Rave" type="Button" parent="."]
layout_mode = 0
offset_left = 713.0
offset_top = 248.0
offset_right = 801.0
offset_bottom = 327.0
scale = Vector2(1.5, 1.5)
text = "Rave"

[node name="Area51" type="Button" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 341.0
offset_right = 329.0
offset_bottom = 425.0
scale = Vector2(1.5, 1.5)
text = "Area51"

[node name="Casino" type="Button" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = 65.0
offset_right = 335.0
offset_bottom = 142.0
scale = Vector2(1.5, 1.5)
text = "Casino"

[node name="Return" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = 243.0
offset_right = -349.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "Return
"

[node name="Map_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 793.0
offset_top = 17.0
offset_right = 858.0
offset_bottom = 54.0
text = "Level Map
"
label_settings = SubResource("LabelSettings_xgc72")
metadata/_edit_use_anchors_ = true

[node name="placeholder" type="Sprite2D" parent="."]
visible = false
position = Vector2(-74, -51)
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_n5rdp")

[node name="BeachLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 734.0
offset_top = 499.0
offset_right = 869.0
offset_bottom = 613.0
text = "Level 1: Beach
"

[connection signal="mouse_entered" from="Beach" to="." method="_on_beach_mouse_entered"]
[connection signal="mouse_exited" from="Beach" to="." method="_on_beach_mouse_exited"]
[connection signal="pressed" from="Beach" to="." method="_on_beach_pressed"]
[connection signal="mouse_entered" from="Rave" to="." method="_on_rave_mouse_entered"]
[connection signal="mouse_exited" from="Rave" to="." method="_on_rave_mouse_exited"]
[connection signal="pressed" from="Rave" to="." method="_on_rave_pressed"]
[connection signal="mouse_entered" from="Area51" to="." method="_on_area_51_mouse_entered"]
[connection signal="mouse_exited" from="Area51" to="." method="_on_area_51_mouse_exited"]
[connection signal="pressed" from="Area51" to="." method="_on_area_51_pressed"]
[connection signal="mouse_entered" from="Casino" to="." method="_on_casino_mouse_entered"]
[connection signal="mouse_exited" from="Casino" to="." method="_on_casino_mouse_exited"]
[connection signal="pressed" from="Casino" to="." method="_on_casino_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
